www/map-app/styles/style.css
/* ... */
.awesome-marker-icon-am40 {
  background-position: -468px 0;
}

/* Energy. */
.sea-initiatives-list-sidebar.sea-field-am50,
.sea-field-am50 .sea-initiatives-list-sidebar-content,
.sea-field-am50:hover,
.sea-field-am50.sea-field-active {
  background: var(--blue) !important;
}

.sea-directory-list .sea-field-am50 {
  border-color: var(--blue) !important;
}

.awesome-marker-icon-am50 {
  background-position: -72px 0;
}

/* Food. */
.sea-initiatives-list-sidebar.sea-field-am60,
.sea-field-am60 .sea-initiatives-list-sidebar-content,
.sea-field-am60:hover,
.sea-field-am60.sea-field-active {
  background: var(--green) !important;
}

.sea-directory-list .sea-field-am60 {
  border-color: var(--green) !important;
}

.awesome-marker-icon-am60 {
  background-position: -216px 0;
}

/* Goods & Services. */
.sea-initiatives-list-sidebar.sea-field-am70,
.sea-field-am70 .sea-initiatives-list-sidebar-content,
.sea-field-am70:hover,
.sea-field-am70.sea-field-active {
  background: var(--red) !important;
}

.sea-directory-list .sea-field-am70 {
  border-color: var(--red) !important;
}

.awesome-marker-icon-am70 {
  background-position: -360px 0;
}

/* Health, Social Care & Wellbeing. */
.sea-initiatives-list-sidebar.sea-field-am80,
.sea-field-am80 .sea-initiatives-list-sidebar-content,
.sea-field-am80:hover,
.sea-field-am80.sea-field-active {
  background: var(--navy) !important;
}

.sea-directory-list .sea-field-am80 {
  border-color: var(--navy) !important;
}

.awesome-marker-icon-am80 {
  background-position: -36px 0;
}

/* Housing. */
.sea-initiatives-list-sidebar.sea-field-am90,
.sea-field-am90 .sea-initiatives-list-sidebar-content,
.sea-field-am90:hover,
.sea-field-am90.sea-field-active {
  background: var(--brown) !important;
  /* color: var(--aqua-contrast) !important; */
}

.sea-directory-list .sea-field-am90 {
  border-color: var(--brown) !important;
}

.awesome-marker-icon-am90 {
  background-position: -576px 0;
}

/* Money & Finance. */
.sea-initiatives-list-sidebar.sea-field-am100,
.sea-field-am100 .sea-initiatives-list-sidebar-content,
.sea-field-am100:hover,
.sea-field-am100.sea-field-active {
  background: var(--purple) !important;
}

.sea-directory-list .sea-field-am100 {
  border-color: var(--purple) !important;
}

.awesome-marker-icon-am100 {
  background-position: -432px 0;
}

/* Nature, Conservation & Environment. */
.sea-initiatives-list-sidebar.sea-field-am110,
.sea-field-am110 .sea-initiatives-list-sidebar-content,
.sea-field-am110:hover,
.sea-field-am110.sea-field-active {
  background: var(--olive) !important;
}

.sea-directory-list .sea-field-am110 {
  border-color: var(--olive) !important;
}

.awesome-marker-icon-am110 {
  background-position: -180px 0;
}

/* Reduce, Reuse, Repair & Recycle. */
.sea-initiatives-list-sidebar.sea-field-am120,
.sea-field-am120 .sea-initiatives-list-sidebar-content,
.sea-field-am120:hover,
.sea-field-am120.sea-field-active {
  background: var(--gray) !important;
  /* color: var(--yellow-contrast) !important; */
}

.sea-directory-list .sea-field-am120 {
  border-color: var(--gray) !important;
}

.awesome-marker-icon-am120 {
  background-position: -612px 0;
}

/* Sidebar */

.sea-sidebar {
  position: absolute;
  width: var(--sidebar-width);
  height: 100%;
  top: 0;
  bottom: 0;
  transform: translateX(-100%);
  transition: transform 0.16s cubic-bezier(0.215, 0.61, 0.355, 1);
  font-family: var(--sea-font-family-sans-serif);
  font-weight: 300;
  color: var(--dark);
  background: white;
}

.sea-sidebar-open {
  transform: translateX(0);
}

.sea-main-sidebar,
.sea-initiatives-list-sidebar,
.sea-initiative-sidebar {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: white;
}

.sea-initiatives-list-sidebar-content,
.sea-initiative-sidebar-content {
  display: flex;
  flex-direction: column;
  padding: 0 0 1.4em;
  font-weight: 400;
}
.sea-initiatives-list-sidebar-content {
  height: 100%;
}

.sea-initiative-non-geo {
  color: gray;
  font-style: italic;
}

.sea-initiative-sidebar-content {
  padding: 0;
}

.sea-initiative-sidebar {
  z-index: 200;
  transform: translateX(-100%);
}

.sea-sidebar-open.sea-sidebar-list-initiatives .sea-initiatives-list-sidebar {
  transform: translateX(var(--sidebar-width));
}

.sea-initiatives-list-sidebar {
  right: 0;
  background-color: var(--dark);
  color: white;
}

.sea-initiatives-list-sidebar,
.sea-initiative-sidebar {
  transition: transform 0.16s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.sea-sidebar h1 {
  font-weight: 700;
  font-size: 1.6rem;
}

.sea-sidebar h2 {
  font-weight: 700;
  font-size: 1.4rem;
}

.sea-sidebar h2.sea-field {
  padding: 0.5rem 1rem 0.7rem;
  margin: 0;
  line-height: 1.3;
  font-size: 1.3rem;
}

.sea-sidebar h3 {
  font-weight: 600;
  font-size: 1.2rem;
}

/* Map */
.map-app-display-container {
  z-index: 30;
}

div.map-app-map-container {
  overflow: hidden;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.map-app-sidebar-button {
  position: absolute;
  left: 100%;
  z-index: -1;
  margin-top: 1em;
}

.map-app-sidebar-button button {
  padding: 0 0.45em;
  font-size: 2.4em;
  background-color: var(--teal);
  color: white;
  transition: all 0.16s;
  transform: translateX(-3px);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
}

.w3-btn:hover {
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
  transform: translateX(0px);
}

.map-app-sidebar-header {
  display: flex;
  justify-content: flex-start;
  background: white;
  color: var(--dark);
  font-size: 1.4em;
}

.sidebar-button {
  flex-shrink: 0;
  font-size: 1.4rem;
}

.w3-button:hover {
  color: white !important;
  background-color: var(--dark) !important;
}

.w3-btn:focus,
.w3-button:focus {
  outline: none;
}

.map-app-sidebar-fixed-section {
  background-color: white;
}

.map-app-sidebar-scrollable-section {
  position: relative;
  flex: 1 1 auto;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}
/* ... */

